# mem-tools

./: Cargo.toml  README.md  examples.sh
inactive-mem/: Cargo.toml  README.md
inactive-mem/examples/: formatting_showcase.rs  memory_reclaim.rs  simple_demo.rs
inactive-mem/src/: formatting.rs  lib.rs  main.rs  memory.rs  monitor.rs  page_cache.rs
kpageflags-visualizer/: Cargo.toml  MOUSE_ZOOM_FEATURES.md  README.md  demo_tui_features.sh  test_ctrl_c.sh  test_interrupt.sh  test_tui_mouse.sh
kpageflags-visualizer/src/: main.rs  tui.rs
src/: main.rs  tui.rs
