[package]
name = "linux-memory-monitor"
version = "0.1.0"
edition = "2024"
description = "A Rust crate for monitoring Linux memory metrics including page cache behavior"
license = "MIT OR Apache-2.0"
keywords = ["linux", "memory", "monitoring", "page-cache", "system"]
categories = ["os::unix-apis", "development-tools::profiling"]

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "1.0"

[dev-dependencies]
tempfile = "3.0"
